--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
 	color: #000000;
 
 	width: 100%;
-	/*min-width: 1000px;*/
 }
 
 .container {
@@ -480,16 +479,6 @@ body {
 	margin-right: 37px;
 }
 
-/*.partners-list-border::after {
-	content: "";
-	background: #efefef;
-	width: 2px;
-	height: 52px;
-	top: 14px;
-	position: absolute;
-	margin-left: 49px;
-}*/
-
 .partners-list-border-htmlacdemy::after {
 	content: "";
 	background: #efefef;
@@ -552,7 +541,7 @@ body {
 	height: 416px;
 }
 
-iframe {
+.iframe {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -1137,12 +1126,6 @@ iframe {
 .feedback-button {
 	margin: 41px 0 36px 0;
 }
-
-.send {
-	width: 260px;
-}
-
-
 
 .none {
 	display: none;
