--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	font-family: "Roboto", sans-serif;
+	font-family: "Roboto", "Arial", sans-serif;
 	font-size: 16px;
 	color: #000000;
 
@@ -29,7 +29,7 @@ body {
 .paragraph {
 	color: #283136;
 	font-size: 16px;
-	font-family: "Roboto", sans-serif;
+	font-family: "Roboto", "Arial", sans-serif;
 	line-height: 1.5;
 	margin: 0;
 }
@@ -46,7 +46,7 @@ body {
 .text-title {
 	padding: 0;
 	margin: 0;
-	font-family: "Roboto", sans-serif;
+	font-family: "Roboto", "Arial", sans-serif;
 }
 
 .button:hover {
@@ -76,7 +76,7 @@ body {
 /*header*/
 
 .header {
-	padding: 40px 0px 0px 0px;
+	padding: 49px 0px 0px 0px;
 }
 
 .nav__link {
@@ -113,7 +113,7 @@ body {
 .basket__link {
 	color: #000;
 	text-decoration: none;
-	font-family: "Roboto", sans-serif;
+	font-family: "Roboto", "Arial", sans-serif;
 	text-transform: uppercase;
 	display: flex;
 	outline-color: #000;
@@ -197,6 +197,7 @@ body {
 	margin: 0px 4px 25px 0;
 	font-size: 18px;
 	display: inline-block;
+	vertical-align: top;
 }
 
 
@@ -241,6 +242,19 @@ body {
 	height: 100%;
 }
 
+.slide-one .paragraph {
+	width: 333px;
+}
+
+.slide-two .paragraph {
+	width: 350px;
+}
+
+
+.slide-three .paragraph {
+	width: 344px;
+}
+
 .slide-one:nth-of-type(1) {
 	content: "";
 	background-image: url(../img/sliders/phone.png);
@@ -278,10 +292,12 @@ body {
 	margin-bottom: 26px;
 	line-height: 1;
 	display: inline-block;
+	vertical-align: top;
 }
 
 .slide-text-suptitle {
 	display: inline-block;
+	vertical-align: top;
 }
 
 .slide-button {
@@ -289,6 +305,7 @@ body {
 	padding: 16px 0;
 	margin-top: 40px;
 	display: inline-block;
+	vertical-align: top;
 	width: 240px;
 	text-align: center;
 }
@@ -300,6 +317,7 @@ body {
 	display: flex;
 	justify-content: space-between;
 	width: 87px;
+	height: 18px;
 }
 
 .next-slide-click div {
@@ -317,9 +335,13 @@ body {
 	border-radius: 50%;
 	background: #fff;
 	border: none;
+	width: 100%;
+	height: 100%;
 }
 
 .slide-active {
+	width: 10px;
+	height: 10px;
 	padding: 2px;
 	margin: 4px;
 	background: #6b5a5a00;
@@ -330,6 +352,7 @@ body {
 /*2 блок*/
 
 .advantages {
+	position: relative;
 	padding: 80px 0 80px 0;
 	margin: 0;
 	width: 1099px;
@@ -344,18 +367,19 @@ body {
 	height: 146px;
 	background-repeat: no-repeat;
 	position: absolute;
+	    top: 80px;
 }
 
 .advantages-site::before {
-	background-image: url(../img/advantages/1.jpg);
+	background-image: url(../img/advantages/websites.jpg);
 }
 
 .advantages-application::before {
-	background-image: url(../img/advantages/2.jpg);
+	background-image: url(../img/advantages/application.jpg);
 }
 
 .advantages-presentation::before {
-	background-image: url(../img/advantages/3.jpg);
+	background-image: url(../img/advantages/presentations.jpg);
 }
 
 .advantages-site-content,
@@ -367,7 +391,7 @@ body {
 
 .advantages-title {
 	text-transform: uppercase;
-	margin: 19px 0;
+	margin: 0px 0px 17px 0;
 	font-size: 24px;
 }
 
@@ -377,9 +401,14 @@ body {
 
 .button-advantages {
 	display: inline-block;
+	vertical-align: top;
 	text-align: center;
 	margin-top: 32px;
 	color: #fff;
+}
+
+.button-advantages:active {
+	box-shadow: 0px -1px 0px 0 rgba(0, 1, 1, 0.75);
 }
 
 
@@ -397,7 +426,7 @@ body {
 .about-information-title {
 	margin-bottom: 33px;
 
-	font-family: "Roboto", sans-serif;
+	font-family: "Roboto", "Arial", sans-serif;
 	font-size: 45px;
 	font-weight: 500;
 	line-height: 1;
@@ -434,7 +463,7 @@ body {
 }
 
 .about-statistics-suptitle {
-	font-family: "Roboto", sans-serif;
+	font-family: "Roboto", "Arial", sans-serif;
 	font-size: 16px;
 	font-weight: bold;
 	text-align: center;
@@ -443,7 +472,7 @@ body {
 
 .statistics-percent b {
 	font-size: 45px;
-	font-family: "Roboto", sans-serif;
+	font-family: "Roboto", "Arial", sans-serif;
 }
 
 .statistics-percent sup {
@@ -625,10 +654,15 @@ body {
 	opacity: 1.0;
 }
 
+.grid-radio-block::before {
+	background: url("../img/icons/radio-on.png");
+}
+
 .grid-radio:checked + .grid-label::before {
 	content: "";
 	background: url("../img/icons/radio-on.png");
 	display: inline-block;
+	vertical-align: top;
 	width: 25px;
 	height: 25px;
 	left: -36px;
@@ -636,8 +670,18 @@ body {
 	opacity: .4;
 }
 
+.grid-radio:checked + .grid-label-block::before {
+	content: "";
+	background: url("../img/icons/radio-on.png");
+	opacity: 0.1;
+}
+
 .grid-radio:hover + .grid-label::before {
 	opacity: 1;
+}
+
+.grid-radio:hover + .grid-label-block::before {
+	opacity: 0.1;
 }
 
 .cost-title {
@@ -711,21 +755,31 @@ body {
 	content: "";
 	background: url("../img/icons/checkbox-on.png");
 	display: inline-block;
+	vertical-align: top;
 	width: 27px;
 	height: 23px;
 	left: -36px;
 	bottom: -1px;
-	opacity: .4;
+	opacity: 0.4;
+}
+
+.grid-checkbox-block:checked + .features-label::before {
+	opacity: 0.1;
 }
 
 .grid-checkbox:hover + .features-label::before {
 	opacity: 1;
 }
 
+.grid-checkbox-block:hover + .features-label::before {
+	opacity: 0.1;
+}
+
 .grid-label::before {
 	content: "";
 	background: url("../img/icons/radio-off.png");
 	display: inline-block;
+	vertical-align: top;
 	width: 25px;
 	height: 25px;
 	left: -36px;
@@ -739,10 +793,17 @@ body {
 	left: 6px;
 }
 
+.grid-label-block::before {
+	content: "";
+	background: url("../img/icons/radio-on.png");
+	opacity: 0.1;
+}
+
 .features-label::before {
 	content: "";
 	background: url("../img/icons/checkbox-off.png");
 	display: inline-block;
+	vertical-align: top;
 	width: 23px;
 	height: 23px;
 	left: -36px;
@@ -855,12 +916,14 @@ body {
 .price-suptitle-kvas,
 .price-suptitle-plus {
 	width: 227px;
+	overflow: auto;
 }
 
 .price-suptitle-mishka,
 .price-suptitle-barbershop,
 .price-suptitle-sedona {
 	width: 190px;
+	overflow: auto;
 }
 
 
@@ -1125,6 +1188,7 @@ body {
 
 .feedback-button {
 	margin: 41px 0 36px 0;
+	padding: 16px 85px 16px 85px;
 }
 
 .none {
